# dephell_venvs

./: .gitignore  .travis.yml  README.md  appveyor.yml  pyproject.toml
dephell_venvs/: __init__.py  _builder.py  _constants.py  _ensurepip.py  _venv.py  _venvs.py
tests/: conftest.py  test_venv.py  test_venvs.py
